[metadata]
name = TestsBase
description = Basic test project for packaging
author = Tristyn Kahrs
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    package_name
install_requires = 
    numpy>=1.21
    pandas>=1.3
    python-decouple>=3.7
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
package_name = py.typed

[flake8]
max-line-length = 160